Allow port/protocol in .env

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ AWS_PROFILE=default
 #VPN_CLIENT_ENDPOINT_ID=cvpn-endpoint
 SECRETS_MANAGER_CA_KEY=gitcaws_ca
 SECRETS_MANAGER_SERVER_KEY=gitcaws_server
+CA_CN=gitcaws_ca
+SERVER_CN=gitcaws_server
+PROTOCOL=tcp
+PORT=443
